--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ img {
 }
 
 #hero img {
-  width: 60%;
+  width: 35%;
 }
 
 /* Section 1 */
@@ -87,14 +87,19 @@ img {
   padding: 20px;
 }
 
-.section1billede img {
-  width: 180px;
+.section1billede {
+  width: 55%;
 }
 
 /* Section 2 */
 
 .w-100 {
   height: auto;
+}
+
+#section1 h2,
+#section1 p {
+  line-height: 2;
 }
 
 /* Section 3 */
@@ -105,6 +110,8 @@ img {
 
 #section3 h2 {
   text-align: center;
+  padding: 30px;
+  padding-top: 65px;
 }
 
 /* Section 4 */
@@ -114,13 +121,13 @@ img {
 
 /* Knap */
 
-.btn-outline-primary {
+/*.btn-outline-primary {
   color: #0d6efd;
   border-color: #0d6efd;
   width: 50%;
   align-items: center;
   border-radius: 6.5rem;
-}
+}*/
 
 button {
   display: flex;
@@ -161,20 +168,27 @@ button {
   max-height: 100%;
 }
 
-.subknap {
+.subknap,
+.btn-outline-primary {
   margin-bottom: 10vw;
   width: 100%;
   background-color: transparent;
   color: #f4a5ae;
 }
 
+.btn-outline-primary {
+  width: 40%;
+}
+
 .form-control,
-.subknap {
+.subknap,
+.btn-outline-primary {
   border-radius: 8vw;
   border: solid 1.5px #f4a5ae;
 }
 
-.btn-primary:hover {
+.btn-primary:hover,
+.btn-outline-primary:hover {
   background-color: #f4a5ae;
   color: #fff;
   border-color: #f4a5ae;
@@ -191,10 +205,6 @@ ul {
 @media (min-width: 576px) {
   #hero h1 {
     font-size: 5rem;
-  }
-
-  #hero img {
-    width: 55%;
   }
 
   #section1 {
@@ -217,7 +227,7 @@ ul {
   }
 
   #hero img {
-    width: 50%;
+    width: 30%;
   }
 
   .form-control,
@@ -246,7 +256,8 @@ ul {
   }
 
   #hero img {
-    width: 35%;
+    width: 14%;
+    z-index: 10;
   }
 
   .hvidboks {
@@ -266,10 +277,6 @@ ul {
   #hero h1 {
     font-size: 9rem;
   }
-
-  #hero img {
-    width: 30%;
-  }
 }
 
 /**************************************************/
@@ -279,9 +286,5 @@ ul {
   /* END "xxl-" 1400px and up */
   .logo img {
     width: 145px;
-  }
-
-  #hero img {
-    width: 25%;
   }
 }
