--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ img {
 }
 
 .section1billede {
-  width: 50%;
+  width: 100%;
 }
 
 /* Section 2 */
@@ -117,6 +117,8 @@ img {
 #section1 h2,
 #section1 p {
   line-height: 2;
+  color: white;
+  max-width: 30vw;
 }
 
 /* Section 3 */
@@ -179,7 +181,7 @@ button {
   margin: auto;
 }
 
-.img1 {
+/* .img1 {
   width: 20vw;
   height: 20vw;
 }
@@ -192,7 +194,7 @@ button {
 .img3 {
   width: 25vw;
   height: 25vw;
-}
+} */
 
 /* Section 5_2 */
 
@@ -394,6 +396,14 @@ ul {
 
   #hero h1 {
     font-size: 9rem;
+  }
+
+  /* Section 4_billeder */
+
+  #section4_billeder img {
+    object-fit: cover;
+    width: 100%;
+    height: 600px;
   }
 }
 
