--- a/style.css
+++ b/style.css
@@ -102,7 +102,7 @@ button.navbar-toggler {
 /* Forside */
 
 #hero {
-  background-image: url("Forside2.png");
+  background-image: url("Forside2.webp");
   height: 91vh;
   background-size: cover;
   background-position: 72% 20%;
